<resources>
    <string name="app_name">Wake TF App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeButton">Ankunft</string>
    <string name="opnvName">ÖPNV</string>
    <string name="autoName">Auto</string>
    <string name="vorbereitenTime">Vorbereitungszeit :</string>
    <string name="gpsBtn">GPS</string>
    <string name="gpsHint">Wohnort</string>
    <string name="ankunftHint">Uhrzeit</string>
    <string name="vorbereitungHint">Minuten</string>
    <string name="mapsBtn">Maps</string>
    <string name="mapsHint">Zielort</string>
    <string name="berechnenBtn">Berechnen</string>
    <string name="berechnenText">Drücke den Button unten!</string>
    <string name="gpsGranted">Let\'s Go!! (GPS Erlaubt)</string>
    <string name="gpsDenied">GPS nicht erlaubt :(</string>
    <string name="uhrPrefix24_1">0%1$d:0%2$d</string>
    <string name="uhrPrefix24_2">%1$d:0%2$d</string>
    <string name="uhrPrefix24_3">0%1$d:%2$d</string>
    <string name="uhrPrefix24_4">%1$d:%2$d</string>
    <string name="mapsSearchHint">Straße oder Postleihzahl</string>
    <string name="aufstehen">Aufstehen: %s</string>
    <string name="mapsFail">Bitte erneut versuchen</string>
    <string-array name="uhrPrefix12">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>