<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <RadioGroup
        android:layout_width="132dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <RadioButton
            android:id="@+id/opnvBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opnvName" />

        <RadioButton
            android:id="@+id/autoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/autoName" />
    </RadioGroup>

    <EditText
        android:id="@+id/timeText"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ankunftHint"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/timeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/timeButton"
        app:layout_constraintTop_toTopOf="@+id/timeButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/vorbereitungMin"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/vorbereitungHint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/textVorbereitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/textVorbereitung"
        app:layout_constraintTop_toTopOf="@+id/textVorbereitung"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textVorbereitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vorbereitenTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeButton"
        app:layout_constraintVertical_bias="0.100000024" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="227dp" />

    <Button
        android:id="@+id/buttonGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVorbereitung"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/textAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gpsHint"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGPS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGPS"
        app:layout_constraintTop_toTopOf="@+id/buttonGPS"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>